--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -19,23 +19,30 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <link rel="canonical" href="{{ site.url ~ page.url }}">
-    <link rel="alternate" type="application/atom+xml" title="David Chen's blog" href="/feed.xml">
-    
+    <link rel="alternate" type="application/atom+xml" title="David Chen's blog" href="{{ site.feed }}">
+
+    <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
+
+    <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ site.url ~ page.url }}">
     <meta property="og:title" content="{{ metaTitle }}">
     <meta property="og:description" content="{{ metaDescription }}">
-    <meta property="og:image" content="{{ site.logo }}">
-    <meta property="og:site_name" content="davidchen.now.sh">
+    <meta property="og:image" content="{{ metaImage or (site.url ~ site.logo) }}">
+    <meta property="og:site_name" content="{{ site.title }}">
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="{{ site.twitter.handle }}">
-    <meta name="twitter:creator" content="{{ site.twitter.handle }}">
+    <meta name="twitter:site" content="{{ site.handles.twitter }}">
+    <meta name="twitter:creator" content="{{ site.handles.twitter }}">
     <meta name="twitter:title" content="{{ metaTitle }}">
     <meta name="twitter:description" content="{{ metaDescription }}">
-    <meta name="twitter:image" content="{{ site.logo }}">
+    <meta name="twitter:image" content="{{ metaImage or (site.url ~ site.logo)}}">
 
-    <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
+    <!-- Google structured data -->
+    {%- if structuredData %}
+      {{ structuredData | safe }}
+    {%- endif %}
   </head>
 
   <body>
@@ -66,6 +73,9 @@
             <li>
               <a href="/about">about</a>
             </li>
+            <li>
+              <a href="{{ site.feed }}">rss</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -73,15 +83,14 @@
         {% block content %}{% endblock %}
       </main>
       <footer class="row">
-      <!--
-        <div class="copyright">© David Chen 2020</div>
-        <div class="social">
-          <a href="/feed.xml"><img width="16" height="16" src="/assets/img/logo-rss.svg" alt="Atom"></a>
-          <a href="{{ site.twitter.link }}"><img width="16" height="16" src="/assets/img/logo-twitter.svg" alt="Twitter"></a>
-          <a href="{{ site.github.link }}"><img width="16" height="16" src="/assets/img/logo-github.svg" alt="GitHub"></a>
-          <a href="{{ site.linkedin.link }}"><img width="16" height="16" src="/assets/img/logo-linkedin.svg" alt="LinkedIn"></a>
+        <div>© 2020 {{ site.author.name }}</div>
+        <div>
+          <a href="{{ site.links.twitter }}">Twitter</a>
+          <span class="divider">/</span>
+          <a href="{{ site.links.github }}">GitHub</a>
+          <span class="divider">/</span>
+          <a href="{{ site.links.linkedin }}">LinkedIn</a>
         </div>
-      -->
       </footer>
     </div>
   </body>
