--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -353,7 +353,7 @@ pre {
   border: 0.1rem solid #e7e7e7;
   background: #f8f9fa;
   font-family: "Fira Mono", Menlo, Consolas, "Liberation Mono", monospace;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   border-radius: 0.6rem;
   padding: 1.6rem;
   margin: 1.6rem 0;
@@ -514,7 +514,6 @@ a {
 }
 
 a:hover {
-  color: #3867d6;
   text-decoration: underline #3867d6;
 }
 
@@ -624,7 +623,7 @@ header nav ul {
 
 header nav li {
   display: inline-block;
-  padding-left: 3.2rem;
+  padding-left: 2.4rem;
 }
 
 header nav a {
@@ -643,7 +642,33 @@ header nav a:hover {
 
 main {
   flex: 1 0 auto;
-  padding: 3.2rem 0 9.6rem;
+  padding: 3.2rem 0 6.4rem;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  padding: 1.6rem 0 3.2rem;
+}
+
+footer > div {
+  margin: 0.5em 0;
+}
+
+footer .divider {
+  margin: 0 0.3rem;
+}
+
+footer a {
+  display: inline-block;
+  color: #0a0d0f;
+  text-decoration: underline rgba(10, 13, 15, 0.4);
+}
+
+footer a:hover {
+  text-decoration: underline #0a0d0f;
 }
 
 .posts {
