--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -108,29 +108,25 @@ hr {
   border-bottom: 0.1rem solid $grey01;
 }
 
-.page {
+.container {
   display: flex;
   flex-direction: column;
   padding-left: $page-gutter;
   padding-right: $page-gutter;
-
-  .row {
-    width: 100%;
-    max-width: $page-width;
-    margin: 0 auto;
-  }
 }
 
-header {
+.row {
+  width: 100%;
+  max-width: $page-width;
+  margin: 0 auto;
+}
+
+.header {
   display: flex;
   justify-content: space-between;
   height: 9.6rem;
 
-  * {
-    font-size: $font-size;
-  }
-
-  .logo {
+  &__logo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -146,7 +142,7 @@ header {
     }
   }
 
-  nav {
+  &__nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -179,7 +175,7 @@ header {
   }
 }
 
-main {
+.main {
   flex: 1 0 auto;
   padding: $font-size * 2 0 $font-size * 4;
 }
@@ -204,7 +200,7 @@ main {
     }
   }
 
-  .draft {
+  &__draft {
     color: $red02;
     background: rgba($red02, 0.2);
     font-size: $font-size * 0.625;
@@ -219,7 +215,7 @@ main {
     bottom: 0.2em;
   }
 
-  .published-date {
+  &__date {
     color: $grey06;
     font-size: $font-size * 0.875;
     margin-left: 0.5em;
@@ -227,7 +223,7 @@ main {
 }
 
 .post {
-  .published-date {
+  &__date {
     display: block;
     color: $grey06;
     margin: 2em 0 1em;
