--- a/src/site/_includes/layouts/post.njk
+++ b/src/site/_includes/layouts/post.njk
@@ -45,7 +45,7 @@
 
   <article class="post">
     <h1>{{ title }}</h1>
-    <time class="published-date" datetime="{{ page.date | moment('YYYY-MM-DD') }}">
+    <time class="post__date" datetime="{{ page.date | moment('YYYY-MM-DD') }}">
       {{ page.date | moment('MMMM D, YYYY') }}
     </time>
     {{ content | safe }}
