--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -568,64 +568,60 @@ hr {
   border-bottom: 0.1rem solid #e7e7e7;
 }
 
-.page {
+.container {
   display: flex;
   flex-direction: column;
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.page .row {
+.row {
   width: 100%;
   max-width: 54rem;
   margin: 0 auto;
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   height: 9.6rem;
 }
 
-header * {
-  font-size: 1.6rem;
-}
-
-header .logo {
+.header__logo {
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex: 0 0 auto;
 }
 
-header .logo a,
-header .logo a:hover {
+.header__logo a,
+.header__logo a:hover {
   display: block;
 }
 
-header .logo svg {
+.header__logo svg {
   display: block;
 }
 
-header nav {
+.header__nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex: 0 0 auto;
 }
 
-header nav ul {
+.header__nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-header nav li {
+.header__nav li {
   display: inline-block;
   padding-left: 2.4rem;
 }
 
-header nav a {
+.header__nav a {
   display: block;
   color: #6c6e6f;
   font-weight: bold;
@@ -634,12 +630,12 @@ header nav a {
   text-decoration: none;
 }
 
-header nav a:hover {
+.header__nav a:hover {
   color: #0a0d0f;
   text-decoration: none;
 }
 
-main {
+.main {
   flex: 1 0 auto;
   padding: 3.2rem 0 6.4rem;
 }
@@ -665,7 +661,7 @@ main {
   border-bottom: solid 0.15em #3867d6;
 }
 
-.posts .draft {
+.posts__draft {
   color: #f53b57;
   background: rgba(245, 59, 87, 0.2);
   font-size: 1rem;
@@ -680,13 +676,13 @@ main {
   bottom: 0.2em;
 }
 
-.posts .published-date {
+.posts__date {
   color: #6c6e6f;
   font-size: 1.4rem;
   margin-left: 0.5em;
 }
 
-.post .published-date {
+.post__date {
   display: block;
   color: #6c6e6f;
   margin: 2em 0 1em;
