--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -571,6 +571,7 @@ hr {
 .container {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -638,6 +639,32 @@ hr {
 .main {
   flex: 1 0 auto;
   padding: 3.2rem 0 6.4rem;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  padding: 1.6rem 0 3.2rem;
+}
+
+footer > div {
+  margin: 0.5em 0;
+}
+
+footer .divider {
+  margin: 0 0.3rem;
+}
+
+footer a {
+  display: inline-block;
+  color: #0a0d0f;
+  text-decoration: underline rgba(10, 13, 15, 0.4);
+}
+
+footer a:hover {
+  text-decoration: underline #0a0d0f;
 }
 
 .posts {
