--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -9,8 +9,8 @@ permalink: index.html
 
 {% block content %}
 
-  <h1>Writings</h1>
-  
+  <h1>Blog</h1>
+
   <ul class="posts">
     {%- for post in collections.posts %}
       <li>
