--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -25,8 +25,8 @@ $slate02: #32414d;
 
 $background-light: #f8f9fa;
 
-$font-size: 1.6rem;
-$page-width: $font-size * 33.75; // 540px, 75-80 characters per line
+$font-size: 1.8rem;
+$page-width: 60rem; // 70-75 characters per line
 $page-gutter: 2rem;
 
 $font-stack: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
