--- a/src/scss/prism.scss
+++ b/src/scss/prism.scss
@@ -15,13 +15,13 @@
 }
 
 pre {
+  @include font-size($small-font-sizes);
   border: 0.1rem solid $grey01;
   background: $background-light;
   font-family: $font-stack-mono;
-  font-size: $font-size * 0.875;
   border-radius: 0.6rem;
-  padding: $font-size;
-  margin: $font-size 0;
+  padding: 1em;
+  margin: 1em 0;
   overflow: scroll;
 }
 
