--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -73,9 +73,6 @@
             <li>
               <a href="/about">about</a>
             </li>
-            <li>
-              <a href="{{ site.feed }}">rss</a>
-            </li>
           </ul>
         </nav>
       </header>
@@ -83,10 +80,12 @@
         {% block content %}{% endblock %}
       </main>
       <footer class="footer row">
-        <div class="footer__block">
+        <div class="footer__copyright">
           © 2020 {{ site.author.name }}
         </div>
-        <div class="footer__block">
+        <div class="footer__links">
+          <a href="{{ site.feed }}">RSS</a>
+          <span class="footer__divider">/</span>
           <a href="{{ site.links.twitter }}">Twitter</a>
           <span class="footer__divider">/</span>
           <a href="{{ site.links.github }}">GitHub</a>
