--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'variables';
 
 ::selection {
-  background: rgba($yellow01, 0.5);
+  background: $yellow01;
 }
 
 * {
@@ -15,26 +15,26 @@ html {
 }
 
 body {
+  @include font-size($base-font-sizes);
   color: $grey10;
-  font-size: $font-size;
   font-family: $font-stack;
   font-weight: normal;
   line-height: 1.5;
 }
 
 h1 {
-  font-size: $font-size * 2.5;
+  @include font-size($h1-font-sizes);
   line-height: 1.25;
   margin: 0.5em 0;
 }
 
 h2 {
-  font-size: $font-size * 1.5;
+  @include font-size($h2-font-sizes);
   line-height: 1.25;
 }
 
 h3 {
-  font-size: $font-size * 1.25;
+  @include font-size($h3-font-sizes);
   line-height: 1.25;
 }
 
@@ -48,7 +48,7 @@ h6 {
 
 a {
   color: $blue02;
-  text-decoration: underline rgba($blue02, 0.4);
+  text-decoration: underline rgba($blue02, 0.5);
 
   &:hover {
     text-decoration: underline $blue02;
@@ -62,17 +62,17 @@ i {
 
 ul,
 ol {
-  padding: 0 0 0 ($font-size * 2);
+  padding: 0 0 0 2em;
 }
 
 blockquote {
   color: $grey06;
-  margin: ($font-size * 2) 0;
-  padding: 0 ($font-size * 2);
+  margin: 2em 0;
+  padding: 0 2em;
 }
 
 table {
-  font-size: $font-size * 0.875;
+  @include font-size($small-font-sizes);
   border-spacing: 0;
   border: 0.1rem solid $grey01;
   width: 100%;
@@ -83,7 +83,7 @@ tr {
   td {
     text-align: left;
     vertical-align: top;
-    padding: $font-size * 0.5 $font-size;
+    padding: 0.5em 1em;
     border-bottom: 0.1rem solid $grey01;
   }
 
@@ -108,30 +108,26 @@ hr {
   border-bottom: 0.1rem solid $grey01;
 }
 
-.page {
+.container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   padding-left: $page-gutter;
   padding-right: $page-gutter;
-
-  .row {
-    width: 100%;
-    max-width: $page-width;
-    margin: 0 auto;
-  }
 }
 
-header {
+.row {
+  width: 100%;
+  max-width: $page-width;
+  margin: 0 auto;
+}
+
+.header {
   display: flex;
   justify-content: space-between;
-  height: 9.6rem;
+  height: 10rem;
 
-  * {
-    font-size: $font-size;
-  }
-
-  .logo {
+  &__logo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -147,7 +143,7 @@ header {
     }
   }
 
-  nav {
+  &__nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -161,7 +157,7 @@ header {
 
     li {
       display: inline-block;
-      padding-left: $font-size * 1.5;
+      padding-left: 1em;
     }
 
     a {
@@ -180,34 +176,41 @@ header {
   }
 }
 
-main {
+.main {
   flex: 1 0 auto;
-  padding: $font-size * 2 0 $font-size * 4;
+  padding: 2rem 0 6rem;
 }
 
-footer {
+.footer {
+  @include font-size($small-font-sizes);
+
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  font-size: $font-size * 0.875;
-  padding: $font-size 0 $font-size * 2;
+  align-items: center;
+  flex-wrap: wrap;
+  border-top: 0.1rem solid $grey01;
+  padding: 2em 0 4em;
 
-  > div {
-    margin: 0.5em 0;
+  &__copyright {
+    margin: 0.25em 2em 0.25em 0;
   }
 
-  .divider {
-    margin: 0 0.3rem;
-  }
+  &__links {
+    margin: 0.25em 0;
 
-  a {
-    display: inline-block;
-    color: $grey10;
-    text-decoration: underline rgba($grey10, 0.4);
+    a {
+      display: inline-block;
+      color: $grey10;
+      text-decoration: underline rgba($grey10, 0.4);
 
-    &:hover {
-      text-decoration: underline $grey10;
+      &:hover {
+        text-decoration: underline $grey10;
+      }
     }
+  }
+
+  &__divider {
+    margin: 0 0.2rem;
   }
 }
 
@@ -222,19 +225,19 @@ footer {
     a {
       color: $grey10;
       text-decoration: none;
-      border-bottom: solid 0.15em rgba($blue02, 0.4);
+      border-bottom: solid 0.2rem rgba($blue02, 0.4);
 
       &:hover {
         text-decoration: none;
-        border-bottom: solid 0.15em $blue02;
+        border-bottom: solid 0.2rem $blue02;
       }
     }
   }
 
-  .draft {
+  &__draft {
     color: $red02;
     background: rgba($red02, 0.2);
-    font-size: $font-size * 0.625;
+    font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.06em;
@@ -246,15 +249,15 @@ footer {
     bottom: 0.2em;
   }
 
-  .published-date {
+  &__date {
+    @include font-size($small-font-sizes);
     color: $grey06;
-    font-size: $font-size * 0.875;
     margin-left: 0.5em;
   }
 }
 
 .post {
-  .published-date {
+  &__date {
     display: block;
     color: $grey06;
     margin: 2em 0 1em;
