--- a/src/scss/prism.scss
+++ b/src/scss/prism.scss
@@ -3,9 +3,9 @@
 // Inline code.
 :not(pre) > code {
   font-family: $font-stack-mono;
-  background: $grey01;
+  background: $background-light;
   border-radius: 0.2rem;
-  padding: 0.05em 0;
+  padding: 0 0.05em;
 
   &:before,
   &:after {
@@ -15,13 +15,11 @@
 }
 
 pre {
-  border: 0.1rem solid $grey01;
+  @include font-size($small-font-sizes);
   background: $background-light;
   font-family: $font-stack-mono;
-  font-size: $font-size * 0.875;
-  border-radius: 0.6rem;
-  padding: $font-size;
-  margin: $font-size 0;
+  padding: 1em;
+  margin: 1em 0;
   overflow: scroll;
 }
 
@@ -56,7 +54,7 @@ pre > code {
 .token.blockquote,
 .token.cdata,
 .token.comment {
-  color: #646768;
+  color: #6b6e70;
 }
 
 .token.builtin,
@@ -112,7 +110,7 @@ pre > code {
 .token.title,
 .token.title .token.punctuation {
   font-weight: bold;
-  color: #1d3e81;
+  color: #032f62;
 }
 
 .token.list {
