--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -23,12 +23,49 @@ $orange02: #ffa801;
 $slate01: #5b768b;
 $slate02: #32414d;
 
-$background-light: #f8f9fa;
+$background-light: #f3f4f7;
 
-$font-size: 1.6rem;
-$page-width: $font-size * 33.75; // 540px, 75-80 characters per line
+$page-width: 60rem; // 70-75 characters per line for 18px IBM Plex Sans
 $page-gutter: 2rem;
 
 $font-stack: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Helvetica Neue', Roboto, Ubuntu, sans-serif;
 $font-stack-mono: 'Fira Mono', Menlo, Consolas, 'Liberation Mono', monospace;
+
+$base-font-sizes: (
+  null: 1.6rem,
+  480px: 1.8rem,
+);
+
+$small-font-sizes: (
+  null: 1.3rem,
+  480px: 1.5rem,
+);
+
+$h1-font-sizes: (
+  null: 4rem,
+  480px: 4.5rem,
+);
+
+$h2-font-sizes: (
+  null: 2.4rem,
+  480px: 2.7rem,
+);
+
+$h3-font-sizes: (
+  null: 2rem,
+  480px: 2.25rem,
+);
+
+@mixin font-size($fs-map) {
+  @each $fs-breakpoint, $fs-font-size in $fs-map {
+    @if $fs-breakpoint == null {
+      font-size: $fs-font-size;
+    }
+    @else {
+      @media screen and (min-width: $fs-breakpoint) {
+        font-size: $fs-font-size;
+      }
+    }
+  }
+}
