--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -9,16 +9,17 @@ permalink: index.html
 
 {% block content %}
 
-  <h1>Writings</h1>
+  <h1>Blog</h1>
+
   <ul class="posts">
     {%- for post in collections.posts %}
       <li>
         <a href="{{ post.url }}">{{ post.data.title }}</a>
-        <time class="published-date" datetime="{{ post.date | moment('YYYY-MM-DD') }}">
+        <time class="posts__date" datetime="{{ post.date | moment('YYYY-MM-DD') }}">
           {{ post.date | moment('MMMM D, YYYY') }}
         </time>
         {% if post.data.draft %}
-          <span class="draft">Draft</span>
+          <span class="posts__draft">Draft</span>
         {% endif %}
       </li>
     {%- endfor %}
