--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -23,7 +23,7 @@ $orange02: #ffa801;
 $slate01: #5b768b;
 $slate02: #32414d;
 
-$background-light: #f3f4f7;
+$background-light: #f6f8fa;
 
 $page-width: 60rem; // 70-75 characters per line for 18px IBM Plex Sans
 $page-gutter: 2rem;
