--- a/src/site/_includes/layouts/post.njk
+++ b/src/site/_includes/layouts/post.njk
@@ -3,46 +3,45 @@
 {% set excerpt = page.excerpt | trim | replace('\n', '') %}
 {% set metaTitle = (title or site.title) ~ ' — David Chen' %}
 {% set metaDescription = excerpt or site.description %}
-{% set metaImage = postImage or (site.url ~ site.logo) %}
+{% set metaImage = postImage or(site.url ~ site.logo) %}
 
 {% set structuredData %}
-  <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "BlogPosting",
-      "url": "{{ site.url ~ page.url }}",
-      "headline": "{{ title }}",
-      "description": "{{ metaDescription }}",
-      "image": "{{ metaImage }}",
-      "inLanguage": "en-US",
-      "datePublished": "{{ page.date | moment }}",
-      "dateModified": "{{ (modified or page.date) | moment }}",
-      "author": {
-        "@type": "Person",
-        "name": "{{ site.author.name }}",
-        "url": "{{ site.url }}"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "{{ site.title }}",
-        "url": "{{ site.url }}",
-        "logo": {
-          "@type": "ImageObject",
-          "width": 400,
-          "height": 400,
-          "url": "{{ site.url ~ site.logo }}"
-        }
-      },
-      "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "{{ site.url ~ page.url }}"
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "BlogPosting",
+    "url": "{{ site.url ~ page.url }}",
+    "headline": "{{ title }}",
+    "description": "{{ metaDescription }}",
+    "image": "{{ metaImage }}",
+    "inLanguage": "en-US",
+    "datePublished": "{{ page.date | moment }}",
+    "dateModified": "{{ (modified or page.date) | moment }}",
+    "author": {
+      "@type": "Person",
+      "name": "{{ site.author.name }}",
+      "url": "{{ site.url }}"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "{{ site.title }}",
+      "url": "{{ site.url }}",
+      "logo": {
+        "@type": "ImageObject",
+        "width": 400,
+        "height": 400,
+        "url": "{{ site.url ~ site.logo }}"
       }
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "{{ site.url ~ page.url }}"
     }
-  </script>
+  }
+</script>
 {% endset %}
 
-{% block content %}
-
+{% block main %}
   <article class="post">
     <h1>{{ title }}</h1>
     <time class="post__date" datetime="{{ page.date | moment('YYYY-MM-DD') }}">
@@ -50,5 +49,28 @@
     </time>
     {{ content | safe }}
   </article>
+{% endblock %}
 
+{% block footer %}
+  <footer class="footer">
+    <div class="footer__inner">
+      <div class="footer__blurb">
+        I'm <a href="/">David Chen</a>, a software engineer living in the San
+        Francisco Bay Area. I enjoy programming, and sometimes
+        <a href="{{ site.blog }}">write about it</a>.
+        If you want to say hello, my email address is
+        <a href="mailto:{{site.author.email }}">{{ site.author.email }}</a>.
+      </div>
+      <div class="footer__links">
+        <a href="{{ site.feed }}">RSS</a>
+        <span class="footer__divider">/</span>
+        <a href="{{ site.links.twitter }}">Twitter</a>
+        <span class="footer__divider">/</span>
+        <a href="{{ site.links.github }}">GitHub</a>
+        <span class="footer__divider">/</span>
+        <a href="{{ site.links.linkedin }}">LinkedIn</a>
+      </div>
+      <div class="footer__copyright">© 2020 David Chen</div>
+    </div>
+  </footer>
 {% endblock %}
