--- a/src/site/pages/404.njk
+++ b/src/site/pages/404.njk
@@ -8,7 +8,7 @@ eleventyExcludeFromCollections: true
 {% set metaTitle = 'Page not found' %}
 {% set metaDescription = 'This page does not exist.' %}
 
-{% block content %}
+{% block main %}
 
   <h1>404</h1>
   <p>Sorry, we can't find what you're looking for.</p>
