--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
 
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Fira+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
 
     <link rel="stylesheet" href="{{ '/assets/css/' ~ manifest['main.min.css'] }}">
 
@@ -47,11 +47,10 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="header row">
-        <div class="header__logo">
-          <a href="/" aria-label="Logo">
-            <svg
+    <header class="header">
+      <div class="header__logo">
+        <a href="/" aria-label="Logo">
+          <svg
               role="img"
               aria-hidden="true"
               focusable="false"
@@ -60,40 +59,21 @@
               viewBox="0 0 100 100"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <g fill="none" fill-rule="evenodd">
-                <circle fill="#32414D" cx="50" cy="50" r="50"/>
-                <circle fill="#FFF" cx="50" cy="50" r="40"/>
-                <path d="M50 20c16.5685425 0 30 13.4314575 30 30 0 16.4028571-13.1641715 29.7310571-29.5038951 29.9959809L50 80V20z" fill="#3867D6"/>
-                <path d="M40.444444 30c-11.2911549 0-20.4444444 8.954305-20.4444444 20 0 10.935238 8.9711391 19.8207048 20.1063581 19.9973206L40.444444 70V30z" fill="#32414D"/>
-              </g>
-            </svg>
-          </a>
-        </div>
-        <nav class="header__nav">
-          <ul>
-            <li>
-              <a href="/about">about</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main class="main row">
-        {% block content %}{% endblock %}
-      </main>
-      <footer class="footer row">
-        <div class="footer__copyright">
-          © 2020 {{ site.author.name }}
-        </div>
-        <div class="footer__links">
-          <a href="{{ site.feed }}">RSS</a>
-          <span class="footer__divider">/</span>
-          <a href="{{ site.links.twitter }}">Twitter</a>
-          <span class="footer__divider">/</span>
-          <a href="{{ site.links.github }}">GitHub</a>
-          <span class="footer__divider">/</span>
-          <a href="{{ site.links.linkedin }}">LinkedIn</a>
-        </div>
-      </footer>
-    </div>
+            <g fill="none" fill-rule="evenodd">
+              <circle fill="#32414D" cx="50" cy="50" r="50"/>
+              <circle fill="#FFF" cx="50" cy="50" r="40"/>
+              <path d="M50 20c16.5685425 0 30 13.4314575 30 30 0 16.4028571-13.1641715 29.7310571-29.5038951 29.9959809L50 80V20z" fill="#3867D6"/>
+              <path d="M40.444444 30c-11.2911549 0-20.4444444 8.954305-20.4444444 20 0 10.935238 8.9711391 19.8207048 20.1063581 19.9973206L40.444444 70V30z" fill="#32414D"/>
+            </g>
+          </svg>
+        </a>
+      </div>
+    </header>
+
+    <main class="main">
+      {% block main %}{% endblock %}
+    </main>
+
+    {% block footer %}{% endblock %}
   </body>
 </html>
