--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -14,7 +14,7 @@ $slate01: #ebeced;
 $slate02: #c2c6ca;
 $slate03: #99a0a6;
 $slate04: #5b6771;
-$slate05: #32414D;
+$slate05: #32414d;
 
 $footer-bg: #1a253c;
 $footer-fg: #bbb8b4;
