--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -9,12 +9,12 @@ permalink: index.html
 
 {% block main %}
 
-  <h1>Hello.</h1>
+  <h1>David Chen</h1>
 
   <div class="hero">
     <div class="hero__blurb">
       <p>
-        I'm David Chen, a software engineer living in the San Francisco Bay Area.
+        Hello! I'm a software engineer living in the San Francisco Bay Area.
         This site is dedicated to my creative interests and whims. I enjoy
         programming, and sometimes <a href="{{ site.blog }}">write about it</a>.
       </p>
